--- a/src/pages/page2/style.css
+++ b/src/pages/page2/style.css
@@ -12,6 +12,7 @@ h1 {
   --tool-bar-width: 150px;
   --tool-bar-Vertical-height: 150px;
   --btnGroup-select-color: #1867c0;
+  --switch-animation-duration: 600ms;
 }
 
 .content {
@@ -144,12 +145,14 @@ h1 {
   opacity: 0;
   visibility: hidden;
   position: absolute;
-  left: 50px;
-  transition: left 1s ease, opacity 1s ease, visibility 1s ease;
+  top: 10px;
+  left: 30px;
+  transition: top var(--switch-animation-duration) ease, left var(--switch-animation-duration) ease, opacity var(--switch-animation-duration) ease, visibility var(--switch-animation-duration) ease;
 }
 .select-tab {
   opacity: 1 !important;
   visibility: visible !important;
+  top: 0 !important;
   left: 0 !important;
 }
 [direction="Horizontal"] [type="btnGroupItem"] {
@@ -164,7 +167,7 @@ h1 {
   height: auto;
   line-height: normal;
   font-size: 20px;
-  transition: opacity 1s ease, visibility 1s ease;
+  transition: opacity var(--switch-animation-duration) ease, visibility var(--switch-animation-duration) ease;
 }
 [direction="Horizontal"] [type="btnGroupItem"] [content] {
   height: auto;
@@ -173,5 +176,5 @@ h1 {
   font-weight: 400;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 1s ease, visibility 1s ease;
+  transition: opacity var(--switch-animation-duration) ease, visibility var(--switch-animation-duration) ease;
 }
