tab上添加视频

--- a/src/pages/page2/style.css
+++ b/src/pages/page2/style.css
@@ -178,3 +178,7 @@ h1 {
   visibility: hidden;
   transition: opacity var(--switch-animation-duration) ease, visibility var(--switch-animation-duration) ease;
 }
+
+video{
+  height: 100%;
+}
